<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_quickbook"
        android:icon="@drawable/ic_directions_car_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_myaccount"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_myaccount" />
    <item
        android:id="@+id/navigation_Talk"
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/title_talk" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/title_more"/>

</menu>
