<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/main_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/linear_layout_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/Anand"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/anand"
                    />

                <TextView
                    android:id="@+id/anand"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Anand"
                    android:layout_marginTop="0dp"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@string/Anand"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linear_layout_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:src="@drawable/amrit"
                    />

                <TextView
                    android:id="@+id/amrit"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@string/Amrit"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:src="@drawable/me"
                    />

                <TextView
                    android:id="@+id/vivek"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@string/Vivek"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>


    </HorizontalScrollView>
</android.support.constraint.ConstraintLayout>